# hastile

./: .gitignore  .travis.yml  404.html  LICENSE  README.md  Setup.hs  circle.yml  hastile-config.json  hastile.cabal  index.html  linux_ci.sh  mkdocs.yml  search.html  stack-ci.yaml  stack.yaml  stack_ci.yml
.circleci/: config.yaml  config.yml
.github/workflows/: build.yml  release.yml
app/: Main.hs
db/: migration
db/env/: test
db/migrate/: 2018081014415700_tokens.sql
docs/: general.md  index.md
general/: index.html
hastile_week_profiling/: h_profile  h_request  z_profile
hastile_week_profiling/hastile_6_json_after-geojson-and-vectortiles/: hastile.prof.html
hastile_week_profiling/hastile_6_mvt_after-geojson-and-vectortiles/: hastile.prof.html
hastile_week_profiling/hastile_7_mvt_use-our-vectortiles/: hastile.prof.html
hastile_week_profiling/vectortiles_0_first/: vectortiles-bench.prof.html
hastile_week_profiling/zellige_1_first/: zellige.prof.html  zellige.ps
hastile_week_profiling/zellige_2_vectortile-optimize-v1/: zellige.prof.html
hastile_week_profiling/zellige_3_before-geojson/: zellige.prof.html
hastile_week_profiling/zellige_4_after-geojson/: zellige.prof.html
hastile_week_profiling/zellige_5_fix-vectortiles-git-dep/: zellige.prof.html
mapnik-vector-tile-c/: build.sh  mvt_from_geojson.c  mvt_from_geojson.cpp  mvt_from_geojson.h
search/: search_index.json
src/: Config.hs  Controllers.hs  DB.hs  Lib.hs  MapboxVectorTile.chs  Routes.hs  Server.hs  SphericalMercator.hs  Tile.hs  Types.hs
src/Hastile/: Config.hs  Controllers.hs  DB.hs  Routes.hs  Server.hs  Tile.hs  Types.hs
src/Hastile/Controllers/: Layer.hs  Token.hs
src/Hastile/DB/: Layer.hs  Layers.hs  Table.hs  Token.hs
src/Hastile/Lib/: Layer.hs  Log.hs  Tile.hs  Token.hs
src/Hastile/Types/: App.hs  Config.hs  Layer.hs  Logger.hs  Mime.hs  Tile.hs  Time.hs  Token.hs
src/Hastile/Types/Layer/: Format.hs  Security.hs
static/: city_plan_noise.html  index.html
test/: Integration.hs  SphericalMercatorSpec.hs  TileSpec.hs
test/Hastile/: TileSpec.hs
test/Hastile/Controllers/: TokenSpec.hs
test/Hastile/Lib/: LayerSpec.hs  TileSpec.hs  TokenSpec.hs
test/Hastile/Types/: TileSpec.hs
test/integration/: 19781.json  19781.mvt  mvt.golden  tile.json
