name:                hastile
version:             0.1.0.0
synopsis:            Tile cache for Mapbox Vector Tiles
description:         Please see README.md
homepage:            https://github.com/vlc/hastile#readme
license:             BSD3
license-file:        LICENSE
author:              Andrew McCluskey
maintainer:          andrew.mccluskey@veitchlister.com.au
copyright:           Andrew McCluskey
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Hastile.Controllers
                     , Hastile.Config
                     , Hastile.DB
                     , Hastile.Routes
                     , Hastile.Server
                     , Hastile.Tile
                     , Hastile.Types
  build-depends:       base >= 4.8 && < 5
                     , aeson
                     , aeson-pretty
                     , bytestring
                     , containers
                     , geojson
                     , hasql
                     , hasql-pool
                     , here
                     , http-types
                     , http-media
                     , lens
                     , list-t
                     , mtl
                     , optparse-generic
                     , prometheus-client
                     , prometheus-metrics-ghc
                     , scientific
                     , servant
                     , servant-server
                     , stm-containers
                     , text
                     , time
                     , transformers
                     , wai
                     , wai-middleware-prometheus
                     , word8
                     , zellige
  ghc-options:       -Wall -Werror -O2
  default-language:  Haskell2010

executable hastile
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       aeson
                     , base
                     , bytestring
                     , containers
                     , filepath
                     , hastile
                     , optparse-generic
                     , text
                     , hasql-pool
                     , postgresql-simple-migration
                     , prometheus-client
                     , prometheus-metrics-ghc
                     , servant-server
                     , stm-containers
                     , transformers
                     , wai
                     , wai-cors
                     , wai-middleware-prometheus
                     , warp
  ghc-options:       -threaded -rtsopts -with-rtsopts=-N -Wall -Werror -O2
  default-language:  Haskell2010

test-suite hastile-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , aeson
                     , bytestring
                     , containers
                     , directory
                     , hastile                     
                     , hspec
                     , lens
                     , QuickCheck
                     , temporary
                     , text     
                     , unordered-containers
                     , vectortiles >=1.3.0                
                     , zellige
  ghc-options:       -threaded -rtsopts -with-rtsopts=-N -Wall -Werror -O2
  other-modules:     TileSpec
  default-language:  Haskell2010

test-suite              hastile-hlint
    hs-source-dirs:     hlint
    main-is:            Main.hs
    type:               exitcode-stdio-1.0
    build-depends:      base
                    ,   hlint
    default-language:   Haskell2010
    ghc-options:        -Wall
                        -Werror
                        -threaded
                        -O2


source-repository head
  type:     git
  location: https://github.com/vlc/hastile
