name:                hastile
version:             0.1.0.0
synopsis:            Tile cache for Mapbox Vector Tiles
description:         Please see README.md
homepage:            https://github.com/vlc/hastile#readme
license:             BSD3
license-file:        LICENSE
author:              Andrew McCluskey
maintainer:          andrew.mccluskey@veitchlister.com.au
copyright:           Andrew McCluskey
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Hastile.Controllers
                     , Hastile.Controllers.Layer
                     , Hastile.Controllers.Token
                     , Hastile.Config
                     , Hastile.DB.Layer
                     , Hastile.DB.Token
                     , Hastile.Lib.Layer
                     , Hastile.Lib.Tile
                     , Hastile.Lib.Token
                     , Hastile.Routes
                     , Hastile.Server
                     , Hastile.Types.App
                     , Hastile.Types.Config
                     , Hastile.Types.Layer
                     , Hastile.Types.Layer.Format
                     , Hastile.Types.Layer.Security
                     , Hastile.Types.Mime
                     , Hastile.Types.Tile
                     , Hastile.Types.Token
  build-depends:       base >= 4.8 && < 5
                     , aeson
                     , aeson-pretty
                     , bytestring
                     , containers
                     , contravariant
                     , foldl
                     , geojson
                     , hasql
                     , hasql-cursor-query
                     , hasql-pool
                     , hasql-transaction
                     , here
                     , http-types
                     , http-media
                     , lens
                     , list-t
                     , lrucaching
                     , mtl
                     , optparse-generic
                     , prometheus-client
                     , prometheus-metrics-ghc
                     , scientific
                     , servant
                     , servant-server
                     , stm-containers
                     , text
                     , time
                     , transformers
                     , vector
                     , wai
                     , wai-middleware-prometheus
                     , word8
                     , wkt-geom
                     , zellige
  ghc-options:       -Wall -Werror -O2
  default-language:  Haskell2010

executable hastile
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       aeson
                     , base
                     , bytestring
                     , containers
                     , filepath
                     , hastile
                     , optparse-generic
                     , text
                     , hasql-pool
                     , lrucaching
                     , prometheus-client
                     , prometheus-metrics-ghc
                     , servant-server
                     , stm-containers
                     , transformers
                     , wai
                     , wai-cors
                     , wai-middleware-prometheus
                     , warp
  ghc-options:       -threaded -rtsopts -with-rtsopts=-N -Wall -Werror -O2
  default-language:  Haskell2010

executable migrate
    hs-source-dirs:         app/migrate
    main-is:                Main.hs
    ghc-options:            -Wall -fwarn-tabs -fwarn-incomplete-uni-patterns
    default-extensions:     OverloadedStrings, CPP, LambdaCase
    default-language:       Haskell2010
    build-depends:          base                        >= 4.6      && < 5.0,
                            base64-bytestring           >= 1.0      && < 1.1,
                            bytestring                  >= 0.10     && < 0.11,
                            cryptohash                  >= 0.11     && < 0.12,
                            directory                   >= 1.2      && < 1.4,
                            postgresql-simple           >= 0.4      && < 0.6,
                            postgresql-simple-migration,
                            time                        >= 1.4      && < 1.9,
                            text                        >= 1.2      && < 1.3  

test-suite hastile-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , aeson
                     , bytestring
                     , containers
                     , directory
                     , hastile
                     , hasql-pool
                     , hasql-transaction
                     , hspec
                     , lens
                     , lrucaching
                     , QuickCheck
                     , temporary
                     , text
                     , time
                     , unordered-containers
                     , vectortiles >=1.4.0                
                     , zellige
  ghc-options:       -threaded -rtsopts -with-rtsopts=-N -Wall -Werror -O2
  other-modules:       Hastile.Lib.LayerSpec
                     , Hastile.Lib.TileSpec
                     , Hastile.Lib.TokenSpec
  default-language:  Haskell2010

test-suite              hastile-hlint
    hs-source-dirs:     hlint
    main-is:            Main.hs
    type:               exitcode-stdio-1.0
    build-depends:      base
                    ,   hlint
    default-language:   Haskell2010
    ghc-options:        -Wall
                        -Werror
                        -threaded
                        -O2


source-repository head
  type:     git
  location: https://github.com/vlc/hastile
